--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,31 +1,17 @@
-template("agora_test") {
-  executable(target_name) {
-    forward_variables_from(invoker, "*")
-    testonly = true
-    if (!defined(invoker.deps)) {
-      deps = []
-    }
-    deps += [ "//third_party/gtest:gtest" ]
-    if (!defined(invoker.configs)) {
-      configs = []
-    }
-    configs += [ "//:agora_config" ]
-    configs += [ "//:agora_test_config" ]
-  }
-}
-
-source_set("math_source") {
+executable("unit_test") {
   testonly = true
   sources = [
-    "test/test_base/log_test_util.cpp",
-    "test/test_base/log_test_util.h",
+    "test/unit_test/ds_test.cpp",
+    "test/main.cpp",
   ]
-  configs = [
-    ":agora_test_config",
-    "utils:agora_utility_config",
+  deps = [
+    "//third_party/gtest:gtest",
+    "src:cp_ds",
   ]
-  public_deps = [
-    "utils:agora_utility_library",
+  include_dirs = [
+    ".",
+    "src",
+    "third_party/gtest/googletest/include",
   ]
 }
 
