--- a/BUILD.gn
+++ b/BUILD.gn
@@ -48,9 +48,11 @@ cp_test("unit_test") {
     "test/main.cpp",
   ]
   deps = [
-    "src:cp_ds",
+    "src:cp",
+    # "src:cp_ds",
   ]
 }
+
 
 # math_source
 # graph_source
