--- a/BUILD.gn
+++ b/BUILD.gn
@@ -14,6 +14,17 @@ config("cp_config") {
     cflags_c = [ "-std=${c_standard_style}${c_standard}" ]
     cflags_objc = [ "-std=${c_standard_style}${c_standard}" ]
   }
+  cflags = [
+    "-Werror",
+    "-Wall",
+    "-Wextra",
+    "-Wshadow",
+    "-Wformat",
+  ]
+
+  if (is_debug) {
+    cflags += [ "-ftrapv" ]
+  }
 
   defines = [ "NOMINMAX" ]
   if (is_win) {
