--- a/BUILD.gn
+++ b/BUILD.gn
@@ -24,6 +24,7 @@ config("cp_config") {
 
   if (is_debug) {
     cflags += [ "-ftrapv" ]
+    cflags += [ "-g" ]
   }
 
   defines = [ "NOMINMAX" ]
@@ -55,6 +56,7 @@ config("cp_test_config") {
 
 cp_test("unit_test") {
   sources = [
+    "test/unit_test/base_test.cpp",
     "test/unit_test/ds_test.cpp",
     "test/unit_test/graph_test.cpp",
     "test/unit_test/math_test.cpp",
