--- a/cp.gni
+++ b/cp.gni
@@ -1,3 +1,13 @@
+template("cp_source_set") {
+  source_set(target_name) {
+    forward_variables_from(invoker, "*")
+    if (!defined(invoker.configs)) {
+      configs = []
+    }
+    configs += [ "//:cp_config" ]
+  }
+}
+
 template("cp_static_library") {
   static_library(target_name) {
     forward_variables_from(invoker, "*")
