--- a/test/testSource.gni
+++ b/test/testSource.gni
@@ -11,6 +11,7 @@ base_test_sources += [
 
 ds_test_sources += [
   "//test/unit_test/ds/ds_test.cpp",
+  "//test/unit_test/ds/listVector_test.cpp"
 ]
 
 graph_test_sources += [
