--- a/test/testSource.gni
+++ b/test/testSource.gni
@@ -22,6 +22,7 @@ math_test_sources += [
   "//test/unit_test/math/basic_test.cpp",
   "//test/unit_test/math/poly_test.cpp",
   "//test/unit_test/math/mix_test.cpp",
+  "//test/unit_test/math/binom_test.cpp",
 ]
 
 string_test_sources = [
