--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -110,6 +110,12 @@ cp_static_library("cp_graph") {
   ]
 }
 
+cp_static_library("cp_thread") {
+  sources = [
+    "thread/threadSafeQueue.h",
+  ]
+}
+
 cp_static_library("cp") {
   sources = [
     "all.h",
