--- a/BUILD.gn
+++ b/BUILD.gn
@@ -25,7 +25,7 @@ config("cp_test_config") {
 }
 
 cp_test("unit_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += base_test_sources
   sources += ds_test_sources
   sources += graph_test_sources
@@ -42,7 +42,7 @@ cp_test("smoke_test") {
   sources = [
     "test/smoke_test/cf.cpp",
     "test/smoke_test/luogu.cpp",
-    "test/main.cpp",
+    "test/gtest_main.cpp",
   ]
   deps = [
     "src:cp",
@@ -50,7 +50,7 @@ cp_test("smoke_test") {
 }
 
 cp_test("cp_base_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += base_test_sources
   deps = [
     "src:cp_base"
@@ -58,7 +58,7 @@ cp_test("cp_base_test") {
 }
 
 cp_test("cp_math_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += math_test_sources
   deps = [
     "src:cp_math"
@@ -66,7 +66,7 @@ cp_test("cp_math_test") {
 }
 
 cp_test("cp_ds_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += ds_test_sources
   deps = [
     "src:cp_ds"
@@ -74,7 +74,7 @@ cp_test("cp_ds_test") {
 }
 
 cp_test("cp_graph_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += graph_test_sources
   deps = [
     "src:cp_graph"
@@ -82,7 +82,7 @@ cp_test("cp_graph_test") {
 }
 
 cp_test("cp_string_test") {
-  sources = [ "test/main.cpp" ]
+  sources = [ "test/gtest_main.cpp" ]
   sources += string_test_sources
   deps = [
     "src:cp_string"
