--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ include(${CMAKE_SOURCE_DIR}/cmake/clang-format.cmake)
 
 # add test
 add_subdirectory(3rdparty/googletest)
+add_subdirectory(src)
 add_subdirectory(tests)
