--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,9 @@ name: TEST
 
 on:
   push:
-    branches:
-      - main
+    branches-ignore:
+      - gh-pages
+      - oldmaster
 
 jobs:
   build:
